--- a/appspec.yml
+++ b/appspec.yml
@@ -11,6 +11,9 @@ hooks:
     - location: scripts/start_server
       timeout: 300
       runas: root
+  AfterInstall:
+    - location: Scripts/after_install.sh
+      timeout: 180
   ApplicationStop:
     - location: scripts/stop_server
       timeout: 300
